@@ -7,6 +7,9 @@
     * The debugger now works, thanks to an upgrade in Devel::Declare.
     * methods are now declared at compile time, like regular subs.
 
+    Other
+    * Added some simple example files.
+
 
 20081021.1911  Tue Oct 21 19:11:47 PDT 2008
     Test Fixes
